--- a/ORIO/lib/README
+++ b/ORIO/lib/README
@@ -1,4 +1,5 @@
 
+hello chat
 This directory is intended for project specific (private) libraries.
 PlatformIO will compile them to static libraries and link into the executable file.
 
@@ -44,3 +45,4 @@ libraries by scanning project source files.
 
 More information about PlatformIO Library Dependency Finder
 - https://docs.platformio.org/page/librarymanager/ldf.html
+
