made changes to readme

--- a/ORIO/include/README
+++ b/ORIO/include/README
@@ -1,5 +1,4 @@
-hihihihihi
-hhehehe
+Stored here is the webpage.h which contains the string for all the HTML, CSS, and JavaScript code for the web controller to be fully functional with the ESP32
 
 This directory is intended for project header files.
 
